assignment1/gen/BKITParser.py
# Generated from /Users/macintoshhd/Documents/PPL/assignment1/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Body'", "'Break'", "'Continue'", "'Do'", 
                     "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", 
                     "'EndWhile'", "'For'", "'Function'", "'If'", "'Parameter'", 
                     "'Return'", "'Then'", "'Var'", "'While'", "'True'", 
                     "'False'", "'EndDo'", "'+'", "'+.'", "'-'", "'-.'", 
                     "'*'", "'*.'", "'\\'", "'\\.'", "'%'", "'!'", "'&&'", 
                     "'||'", "'=='", "'='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='", "'=/='", "'<.'", "'>.'", "'>=.'", "'<=.'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "';'", 
                     "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "ID", "INT", "HEXA", "OCTAL", 
                      "FLOAT", "STRING", "BOOL", "BODY", "BREAK", "CONTINUE", 
                      "DO", "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", 
                      "ENDWHILE", "FOR", "FUNCTION", "IF", "PARAMETER", 
                      "RETURN", "THEN", "VAR", "WHILE", "TRUE", "FALSE", 
                      "ENDDO", "ADD", "ADDF", "SUB", "SUBF", "MUL", "MULF", 
                      "DIV", "DIVF", "MODUL", "NOT", "AND", "OR", "EQ", 
                      "ASS", "NEQ", "GREATER", "LESS", "GEQ", "LEQ", "NEQF", 
                      "LESSF", "GREATERF", "GEQF", "LEQF", "LP", "RP", "LS", 
                      "RS", "LB", "RB", "COLON", "SM", "CM", "DOT", "WS", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_var_decl = 1
    RULE_listID = 2
    RULE_typeID = 3
    RULE_array = 4
    RULE_dimension = 5
    RULE_init_var = 6
    RULE_unit_array = 7
    RULE_init_array_ = 8
    RULE_init_array = 9
    RULE_func_decl = 10
    RULE_parameter = 11
    RULE_stm = 12
    RULE_assign_stm = 13
    RULE_if_stm = 14
    RULE_for_smt = 15
    RULE_while_stm = 16
    RULE_dowhile_stm = 17
    RULE_break_stm = 18
    RULE_continue_stm = 19
    RULE_call_stm = 20
    RULE_call_func = 21
    RULE_return_stm = 22
    RULE_index_operators = 23
    RULE_exp = 24
    RULE_exp1 = 25
    RULE_exp2 = 26
    RULE_exp3 = 27
    RULE_exp4 = 28
    RULE_exp5 = 29
    RULE_exp6 = 30
    RULE_exp7 = 31
    RULE_operand = 32
    RULE_literal = 33

    ruleNames =  [ "program", "var_decl", "listID", "typeID", "array", "dimension", 
                   "init_var", "unit_array", "init_array_", "init_array", 
                   "func_decl", "parameter", "stm", "assign_stm", "if_stm", 
                   "for_smt", "while_stm", "dowhile_stm", "break_stm", "continue_stm", 
                   "call_stm", "call_func", "return_stm", "index_operators", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "operand", "literal" ]

    EOF = Token.EOF
    COMMENT=1
    ID=2
    INT=3
    HEXA=4
    OCTAL=5
    FLOAT=6
    STRING=7
    BOOL=8
    BODY=9
    BREAK=10
    CONTINUE=11
    DO=12
    ELSE=13
    ELSEIF=14
    ENDBODY=15
    ENDIF=16
    ENDFOR=17
    ENDWHILE=18
    FOR=19
    FUNCTION=20
    IF=21
    PARAMETER=22
    RETURN=23
    THEN=24
    VAR=25
    WHILE=26
    TRUE=27
    FALSE=28
    ENDDO=29
    ADD=30
    ADDF=31
    SUB=32
    SUBF=33
    MUL=34
    MULF=35
    DIV=36
    DIVF=37
    MODUL=38
    NOT=39
    AND=40
    OR=41
    EQ=42
    ASS=43
    NEQ=44
    GREATER=45
    LESS=46
    GEQ=47
    LEQ=48
    NEQF=49
    LESSF=50
    GREATERF=51
    GEQF=52
    LEQF=53
    LP=54
    RP=55
    LS=56
    RS=57
    LB=58
    RB=59
    COLON=60
    SM=61
    CM=62
    DOT=63
    WS=64
    ILLEGAL_ESCAPE=65
    UNCLOSE_STRING=66
    UNTERMINATED_COMMENT=67
    ERROR_CHAR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 68
                self.var_decl()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 74
                self.func_decl()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def listID(self):
            return self.getTypedRuleContext(BKITParser.ListIDContext,0)


        def SM(self):
            return self.getToken(BKITParser.SM, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = BKITParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(BKITParser.VAR)
            self.state = 83
            self.match(BKITParser.COLON)
            self.state = 84
            self.listID()
            self.state = 85
            self.match(BKITParser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListIDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeID(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.TypeIDContext)
            else:
                return self.getTypedRuleContext(BKITParser.TypeIDContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_listID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListID" ):
                listener.enterListID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListID" ):
                listener.exitListID(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListID" ):
                return visitor.visitListID(self)
            else:
                return visitor.visitChildren(self)




    def listID(self):

        localctx = BKITParser.ListIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_listID)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.typeID()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.CM:
                self.state = 88
                self.match(BKITParser.CM)
                self.state = 89
                self.typeID()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeIDContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def array(self):
            return self.getTypedRuleContext(BKITParser.ArrayContext,0)


        def init_var(self):
            return self.getTypedRuleContext(BKITParser.Init_varContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_typeID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeID" ):
                listener.enterTypeID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeID" ):
                listener.exitTypeID(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeID" ):
                return visitor.visitTypeID(self)
            else:
                return visitor.visitChildren(self)




    def typeID(self):

        localctx = BKITParser.TypeIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeID)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.array()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.init_var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def dimension(self):
            return self.getTypedRuleContext(BKITParser.DimensionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = BKITParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(BKITParser.ID)
            self.state = 101
            self.dimension()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LS(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LS)
            else:
                return self.getToken(BKITParser.LS, i)

        def RS(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RS)
            else:
                return self.getToken(BKITParser.RS, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT)
            else:
                return self.getToken(BKITParser.INT, i)

        def HEXA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.HEXA)
            else:
                return self.getToken(BKITParser.HEXA, i)

        def OCTAL(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.OCTAL)
            else:
                return self.getToken(BKITParser.OCTAL, i)

        def getRuleIndex(self):
            return BKITParser.RULE_dimension

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimension" ):
                listener.enterDimension(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimension" ):
                listener.exitDimension(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension" ):
                return visitor.visitDimension(self)
            else:
                return visitor.visitChildren(self)




    def dimension(self):

        localctx = BKITParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dimension)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 103
                    self.match(BKITParser.LS)
                    self.state = 104
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.INT) | (1 << BKITParser.HEXA) | (1 << BKITParser.OCTAL))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 105
                    self.match(BKITParser.RS)

                else:
                    raise NoViableAltException(self)
                self.state = 108 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASS(self):
            return self.getToken(BKITParser.ASS, 0)

        def INT(self):
            return self.getToken(BKITParser.INT, 0)

        def HEXA(self):
            return self.getToken(BKITParser.HEXA, 0)

        def OCTAL(self):
            return self.getToken(BKITParser.OCTAL, 0)

        def BOOL(self):
            return self.getToken(BKITParser.BOOL, 0)

        def STRING(self):
            return self.getToken(BKITParser.STRING, 0)

        def FLOAT(self):
            return self.getToken(BKITParser.FLOAT, 0)

        def init_array(self):
            return self.getTypedRuleContext(BKITParser.Init_arrayContext,0)


        def array(self):
            return self.getTypedRuleContext(BKITParser.ArrayContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_init_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit_var" ):
                listener.enterInit_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit_var" ):
                listener.exitInit_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit_var" ):
                return visitor.visitInit_var(self)
            else:
                return visitor.visitChildren(self)




    def init_var(self):

        localctx = BKITParser.Init_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_init_var)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(BKITParser.ID)
                self.state = 111
                self.match(BKITParser.ASS)
                self.state = 119
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.INT]:
                    self.state = 112
                    self.match(BKITParser.INT)
                    pass
                elif token in [BKITParser.HEXA]:
                    self.state = 113
                    self.match(BKITParser.HEXA)
                    pass
                elif token in [BKITParser.OCTAL]:
                    self.state = 114
                    self.match(BKITParser.OCTAL)
                    pass
                elif token in [BKITParser.BOOL]:
                    self.state = 115
                    self.match(BKITParser.BOOL)
                    pass
                elif token in [BKITParser.STRING]:
                    self.state = 116
                    self.match(BKITParser.STRING)
                    pass
                elif token in [BKITParser.FLOAT]:
                    self.state = 117
                    self.match(BKITParser.FLOAT)
                    pass
                elif token in [BKITParser.LB]:
                    self.state = 118
                    self.init_array()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.array()
                self.state = 122
                self.match(BKITParser.ASS)
                self.state = 130
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.LB]:
                    self.state = 123
                    self.init_array()
                    pass
                elif token in [BKITParser.INT]:
                    self.state = 124
                    self.match(BKITParser.INT)
                    pass
                elif token in [BKITParser.HEXA]:
                    self.state = 125
                    self.match(BKITParser.HEXA)
                    pass
                elif token in [BKITParser.OCTAL]:
                    self.state = 126
                    self.match(BKITParser.OCTAL)
                    pass
                elif token in [BKITParser.BOOL]:
                    self.state = 127
                    self.match(BKITParser.BOOL)
                    pass
                elif token in [BKITParser.STRING]:
                    self.state = 128
                    self.match(BKITParser.STRING)
                    pass
                elif token in [BKITParser.FLOAT]:
                    self.state = 129
                    self.match(BKITParser.FLOAT)
                    pass
                else:
                    raise NoViableAltException(self)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unit_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.BOOL)
            else:
                return self.getToken(BKITParser.BOOL, i)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.STRING)
            else:
                return self.getToken(BKITParser.STRING, i)

        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.FLOAT)
            else:
                return self.getToken(BKITParser.FLOAT, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT)
            else:
                return self.getToken(BKITParser.INT, i)

        def HEXA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.HEXA)
            else:
                return self.getToken(BKITParser.HEXA, i)

        def OCTAL(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.OCTAL)
            else:
                return self.getToken(BKITParser.OCTAL, i)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.CM)
            else:
                return self.getToken(BKITParser.CM, i)

        def getRuleIndex(self):
            return BKITParser.RULE_unit_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit_array" ):
                listener.enterUnit_array(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit_array" ):
                listener.exitUnit_array(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnit_array" ):
                return visitor.visitUnit_array(self)
            else:
                return visitor.visitChildren(self)




    def unit_array(self):

        localctx = BKITParser.Unit_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_unit_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INT, BKITParser.HEXA, BKITParser.OCTAL]:
                self.state = 134
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.INT) | (1 << BKITParser.HEXA) | (1 << BKITParser.OCTAL))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [BKITParser.BOOL]:
                self.state = 135
                self.match(BKITParser.BOOL)
                pass
            elif token in [BKITParser.STRING]:
                self.state = 136
                self.match(BKITParser.STRING)
                pass
            elif token in [BKITParser.FLOAT]:
                self.state = 137
                self.match(BKITParser.FLOAT)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.CM:
                self.state = 140
                self.match(BKITParser.CM)
                self.state = 146
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.INT, BKITParser.HEXA, BKITParser.OCTAL]:
                    self.state = 141
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.INT) | (1 << BKITParser.HEXA) | (1 << BKITParser.OCTAL))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    pass
                elif token in [BKITParser.BOOL]:
                    self.state = 142
                    self.match(BKITParser.BOOL)
                    pass
                elif token in [BKITParser.STRING]:
                    self.state = 143
                    self.match(BKITParser.STRING)
                    pass
                elif token in [BKITParser.FLOAT]:
                    self.state = 144
                    self.match(BKITParser.FLOAT)
                    pass
                elif token in [BKITParser.RB, BKITParser.CM]:
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_array_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def CM(self):
            return self.getToken(BKITParser.CM, 0)

        def init_array_(self):
            return self.getTypedRuleContext(BKITParser.Init_array_Context,0)


        def unit_array(self):
            return self.getTypedRuleContext(BKITParser.Unit_arrayContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_init_array_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit_array_" ):
                listener.enterInit_array_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit_array_" ):
                listener.exitInit_array_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit_array_" ):
                return visitor.visitInit_array_(self)
            else:
                return visitor.visitChildren(self)




    def init_array_(self):

        localctx = BKITParser.Init_array_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_init_array_)
        self._la = 0 # Token type
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(BKITParser.LB)
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.INT) | (1 << BKITParser.HEXA) | (1 << BKITParser.OCTAL) | (1 << BKITParser.FLOAT) | (1 << BKITParser.STRING) | (1 << BKITParser.BOOL))) != 0):
                    self.state = 154
                    self.unit_array()


                self.state = 157
                self.match(BKITParser.RB)
                self.state = 158
                self.match(BKITParser.CM)
                self.state = 159
                self.init_array_()
                pass
